# Cosmetics-Analyzer

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/bot/: bot.py
app/db/: crud.py
app/services/: cosmetic_risk_determining_service.py  ingredient_score.py  package_cropper.py  similarity_service.py  text_processing_service.py  vision_service.py
app/utils/: database_creator.py
frontend/src/: index.html  index.js  script.js  style.css
frontend/src/pages/: Home.js  home.html  style.css
