[project]
name = "cosmetics-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Tsaregorodtsev",email = "Tsaregorodtsev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "opencv-python (>=4.10.0.84,<5.0.0.0)",
    "python-telegram-bot (>=21.10,<22.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
